--- a/src/app/style/components/_nav.scss
+++ b/src/app/style/components/_nav.scss
@@ -37,7 +37,7 @@ nav {
         justify-content: space-around;
 
         li {
-            width: 70px;
+            // width: 70px;
             justify-content: flex-end;
             display: flex;
             font-size: 16px;
@@ -46,22 +46,15 @@ nav {
     }
 }
  
-#navbar-btn {
-    min-width: 140px;
-    height: 100%;
+#nav-btn {
+    height: 45px;
+    width: 110px;
+    margin-left: 10px;
+    // background: rgb(7, 7, 117);
     display: flex;
-    justify-content: flex-end;
     align-items: center;
-
-    #navbar-btn-link {
-        font-size: 14px;
-        height: 45px;
-        width: 80%;
-        background: $cta;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-weight: bold;
-        border-radius: 5px;
-    }
+    justify-content: center;
+    border-radius: 5px;
+    font-weight: bold;
+    font-size: 16px;
 }
