--- a/src/app/style/style.css
+++ b/src/app/style/style.css
@@ -66,7 +66,6 @@ nav {
 }
 
 #links-wrapp ul li {
-  width: 70px;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
@@ -77,25 +76,10 @@ nav {
   color: #737373;
 }
 
-#navbar-btn {
-  min-width: 140px;
-  height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-#navbar-btn #navbar-btn-link {
-  font-size: 14px;
+#nav-btn {
   height: 45px;
-  width: 80%;
-  background: #0a2c5f;
+  width: 110px;
+  margin-left: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -105,8 +89,27 @@ nav {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  font-weight: bold;
   border-radius: 5px;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+#emailVerificationPage {
+  height: 90vh;
+  width: 100%;
+}
+
+#emailVerificationPage h1 {
+  font-size: 42px;
+  font-weight: bold;
+}
+
+#emailVerificationPage .success-wrapper {
+  background: green;
+}
+
+#emailVerificationPage .error-wrapper {
+  background: red;
 }
 
 * {
