role based auth added

--- a/src/app/style/_config.scss
+++ b/src/app/style/_config.scss
@@ -7,8 +7,14 @@ $cta: #0a2c5f;
 
 @media only screen and (min-width: 1000px) {
     .container {
-      width: 900px;
+      width: 1250px;
       margin: auto;
     }
   }
   
+
+$lightBlue: #8ecae6;
+$blue: #209ebd;
+$darkBlue: #033147;
+$yellow: #ffb602;
+$orange: #fa8400;
