--- a/src/app/style/_config.scss
+++ b/src/app/style/_config.scss
@@ -1,20 +1,20 @@
-$cta: #0a2c5f;
+// $cta: #0a2c5f;
 
-.container {
-    width: 90%;
-    margin-left: 5%;
-}
+// .container {
+//     width: 90%;
+//     margin-left: 5%;
+// }
 
-@media only screen and (min-width: 1000px) {
-    .container {
-      width: 1250px;
-      margin: auto;
-    }
-  }
+// @media only screen and (min-width: 1000px) {
+//     .container {
+//       width: 1250px;
+//       margin: auto;
+//     }
+//   }
   
 
-$lightBlue: #8ecae6;
-$blue: #209ebd;
-$darkBlue: #033147;
-$yellow: #ffb602;
-$orange: #fa8400;
+// $lightBlue: #8ecae6;
+// $blue: #209ebd;
+// $darkBlue: #033147;
+// $yellow: #ffb602;
+// $orange: #fa8400;
