--- a/src/app/style/style.scss
+++ b/src/app/style/style.scss
@@ -1,10 +1,10 @@
-@import './config';
-@import './components/nav';
+// @import './config';
+// @import './components/nav';
 
-@import './pages/emailVerification';
+// @import './pages/emailVerification';
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+// * {
+//     margin: 0;
+//     padding: 0;
+//     box-sizing: border-box;
+// }
