--- a/src/app/style/style.scss
+++ b/src/app/style/style.scss
@@ -8,3 +8,25 @@
 //     padding: 0;
 //     box-sizing: border-box;
 // }
+
+
+.trending-news-th-image::before {
+    content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+      background: rgba(0,0,0,0.5);
+      transition: .4s;
+      cursor: pointer;
+}
+
+.trending-news-th-image {
+    &:hover {
+        
+        &::before {
+            background: rgba(0,0,0,0.8);
+        }
+    }
+}
