--- a/src/app/style/style.css
+++ b/src/app/style/style.css
@@ -15,3 +15,8 @@
   background: rgba(0, 0, 0, 0.8);
 }
 /*# sourceMappingURL=style.css.map */
+
+  /* Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
